// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it returns all items with matching Id 1`] = `
[
  {
    "Id": "1",
    "ItemName": "Razors",
    "Stock": 10,
  },
]
`;

exports[`it returns all items with matching ItemName 1`] = `
[
  {
    "Id": "1",
    "ItemName": "Razors",
    "Stock": 10,
  },
  {
    "Id": "6",
    "ItemName": "Razors",
    "Stock": 60,
  },
]
`;
